# PUMA_Nucleus_Segmentation

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  inference.sh  pyproject.toml  requirements.txt  save.sh
configs/: baseline.yaml  multitask.yaml
notebooks/: 01_eda.ipynb  02_inference_demo.ipynb  03_train_puma_colab.ipynb  Train_puma_colab.ipynb
scripts/: challenge_inference.py  evaluate.py  output_rename.py  predict.py  prepare_data.py  train.py
src/puma_seg/: __init__.py
src/puma_seg/cli/: __init__.py  _evaluate_impl.py  _predict_impl.py  _train_impl.py  evaluate.py  predict.py  train.py
src/puma_seg/data/: __init__.py  dataset.py  geojson_parser.py  transforms.py
src/puma_seg/evaluation/: __init__.py  metrics.py
src/puma_seg/models/: __init__.py  cellpose_wrapper.py  cp4_dataset.py  cp_transformer.py  losses.py  nucleus_classifier.py
src/puma_seg/training/: __init__.py  callbacks.py  trainer.py
src/puma_seg/utils/: __init__.py  io_utils.py  visualization.py
tests/: __init__.py  conftest.py  test_cp4_loss_bug_condition.py  test_dataset.py  test_io_utils.py  test_metrics.py  test_model.py
